[package]
name = "rstatus"
version = "0.9.5"
authors = ["Oleg Keri <ezhi99@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "*"
libc = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"

alsa = { version = "*", optional = true }
libpulse-binding = { version = "*", optional = true }
pipewire = { optional = true,  git = "https://gitlab.freedesktop.org/ryuukyu/pipewire-rs.git", branch = "params" }


[features]
pulse = ["dep:libpulse-binding"]
default = ["pulse"]
