[package]
name = "rstatus"
version = "0.9.5"
authors = ["Oleg Keri <ezhi99@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
chrono = "*"
libc = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
iwlib = "*"

alsa = { version = "*", optional = true }
libpulse-binding = { version = "*", optional = true }
pipewire = { optional = true,  version = "0.7.2" }


[features]
pulse = ["dep:libpulse-binding"]
default = ["pipewire"]
